--- a/package.json
+++ b/package.json
@@ -1,5 +1,11 @@
 {
-  "dependencies": {
-    "cypress": "^13.15.2"
+  "scripts": {
+    "cy:open": "cypress open",
+    "cy:run": "cypress run"
+  },
+  "devDependencies": {
+    "@types/node": "^14.18.21",
+    "cypress": "^13.15.2",
+    "typescript": "^5.7.2"
   }
 }
